crates/context-macro/tests/constraints/invalid_seeds_syntax.fail.stderr
error: expected square brackets
  --> tests/constraints/invalid_seeds_syntax.fail.rs:25:17
   |
25 |         seeds = &[&args.admin],
   |                 ^
